--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 body {
-
+  background: linear-gradient(#060606 10%, #141414);
   font-family: 'Source Sans Pro', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  background-color: #141414;
-
   user-select: none;
 }
