--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,12 +2,12 @@
   display: flex;
   flex-flow: row;
   align-items: center;
-  
 
   padding: 0 2em;
 
   color: #e5e5e5;
 
+  
   .header-pages {
     display: flex;
     flex-flow: row;
@@ -27,5 +27,14 @@
   }
   .utils > * {
     margin: 0 12px;
+  }
+  .down-array {
+    transition: all 0.25s ease-in-out;
+  }
+  .user:hover {
+    .down-array {
+      transform: rotate(180deg);
+      transition: all 0.25s ease-in-out;
+    }
   }
 }
