--- a/src/components/Lolomo/Movies/Movie/Movie.scss
+++ b/src/components/Lolomo/Movies/Movie/Movie.scss
@@ -1,13 +1,44 @@
 .movie {
-  // .movie-details {
-  //   visibility: hidden;
-  //   opacity: 0;
-  //   transition: opacity 0.62s, ease 1s;
-  // }
+  position: relative;
+  vertical-align: middle;
+  display: inline-block;
+  width: 200px;
+  height: 300px;
+  transition-duration: 0.5s;
+  overflow: hidden;
+  cursor: pointer;
+  .poster {
+    transition: transform 2s;
+    &:hover {
+      transform: scale(1.5);
+    }
+  }
   &:hover {
-    visibility: visible;
-    transition: opacity 0.62s, ease 1s;
-    opacity: 1;
+    transition-delay: 0.5s;
+    width: 500px;
+    height: 500px;
+    background-color: #181818;
+
+    .movie-details {
+      .movie-actions {
+        transition-delay: 0.5s;
+        opacity: 1;
+      }
+    }
+  }
+  .movie-details {
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+
+    display: block;
+    position: relative;
+    z-index: 2;
+
+    .movie-actions {
+      transition-duration: 0.5s;
+      opacity: 0;
+    }
   }
 }
 
