--- a/src/components/Lolomo/Movies/Movie/Movie.scss
+++ b/src/components/Lolomo/Movies/Movie/Movie.scss
@@ -1,46 +1,91 @@
 .movie {
-  position: relative;
-  vertical-align: middle;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  position: inherit;
+  transition: transform 500ms;
   width: 200px;
   height: 300px;
-  transition-duration: 0.5s;
-  overflow: hidden;
-  cursor: pointer;
-  .poster {
-    transition: transform 2s;
-    &:hover {
-      transform: scale(1.5);
-    }
-  }
-  &:hover {
-    transition-delay: 0.5s;
-    width: 500px;
-    height: 500px;
-    background-color: #181818;
+  background-color: #1f1f1f;
 
-    .movie-details {
-      .movie-actions {
-        transition-delay: 0.5s;
-        opacity: 1;
-      }
-    }
+  text-decoration: none;
+  &:hover {
+    width: 400px;
+    height: 600px;
   }
   .movie-details {
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-
-    display: block;
-    position: relative;
-    z-index: 2;
-
-    .movie-actions {
-      transition-duration: 0.5s;
-      opacity: 0;
-    }
+    padding-top: 60px;
+  }
+  a:visited {
+    color: inherit;
   }
 }
+
+.poster {
+  position: relative;
+  display: block;
+  transition: transform 500ms;
+}
+
+// .swiper:focus-within .poster,
+// .swiper:hover .poster {
+//   transform: translateX(-25%);
+// }
+
+#movie .poster:hover {
+  transform: scale(1.5);
+  z-index: 1;
+}
+
+.movie img {
+  display: block;
+  max-width: 100%;
+}
+
+// .poster {
+//   display: flex;
+// flex-direction: column;
+//   width: 200px;
+//   height: 300px;
+
+//   cursor: pointer;
+//   .poster {
+//     transition: transform 2s;
+//     &:hover {
+//       transform: scale(1.5);
+//     }
+//   }
+//   &:hover {
+
+//      position:absolute;
+//     z-index: 1;
+
+//     transition-delay: 0.5s;
+//     width: 500px;
+//     height: 500px;
+//     background-color: #181818;
+//     .poster-details {
+//       .poster-actions {
+
+//         // transition-delay: 0.5s;
+//         opacity: 1;
+//       }
+//     }
+//   }
+//   .poster-details {
+//     color: white;
+//     text-decoration: none;
+//     cursor: pointer;
+
+//     display: block;
+//     position: relative;
+//     z-index: 1;
+
+//     .poster-actions {
+//       // transition-duration: 0.5s;
+//       opacity: 0;
+//     }
+//   }
+// }
 
 .movie-info {
   font-weight: 600;
@@ -56,6 +101,7 @@
 
     padding: 12px;
     margin-bottom: 8px;
+    margin-right: 8px;
     &:hover {
       border-color: rgba(255, 255, 255, 1);
     }
