--- a/src/components/Lolomo/Movies/Movie/Movie.scss
+++ b/src/components/Lolomo/Movies/Movie/Movie.scss
@@ -1,96 +1,65 @@
-.movie {
-  display: flex;
-  flex-direction: column;
-  position: inherit;
-  transition: transform 500ms;
-  width: 200px;
-  height: 300px;
+.swiper {
+  position: fixed;
+  overflow: visible !important;
+}
+
+.preview {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 5%;
+  z-index: 50;
+
+  height: 480px;
+  width: 450px;
+
+  transition: display 1.429s ease;
   background-color: #1f1f1f;
 
-  text-decoration: none;
-  &:hover {
-    width: 400px;
-    height: 600px;
+  transform: translate(-10%, -2.5%);
+  .postercopy {
+    height: 300px;
+    width: 450px;
   }
   .movie-details {
-    padding-top: 60px;
+    z-index: 2;
   }
-  a:visited {
-    color: inherit;
+}
+.movie {
+  position: relative;
+  height: 342px;
+  width: 250px;
+
+  z-index: 1;
+  text-decoration: none;
+
+  color: #e5e5e5 !important;
+
+  &:hover {
+    .preview {
+      display: inline-block;
+      transition: display 1.429s ease;
+    }
   }
+}
+.movie-details {
+  position: absolute;
+  padding: 20px 15px;
 }
 
 .poster {
-  position: relative;
+  position: initial;
   display: block;
-  transition: transform 500ms;
+  height: 342px;
 }
-
-// .swiper:focus-within .poster,
-// .swiper:hover .poster {
-//   transform: translateX(-25%);
-// }
-
-#movie .poster:hover {
-  transform: scale(1.5);
-  z-index: 1;
-}
-
-.movie img {
-  display: block;
-  max-width: 100%;
-}
-
-// .poster {
-//   display: flex;
-// flex-direction: column;
-//   width: 200px;
-//   height: 300px;
-
-//   cursor: pointer;
-//   .poster {
-//     transition: transform 2s;
-//     &:hover {
-//       transform: scale(1.5);
-//     }
-//   }
-//   &:hover {
-
-//      position:absolute;
-//     z-index: 1;
-
-//     transition-delay: 0.5s;
-//     width: 500px;
-//     height: 500px;
-//     background-color: #181818;
-//     .poster-details {
-//       .poster-actions {
-
-//         // transition-delay: 0.5s;
-//         opacity: 1;
-//       }
-//     }
-//   }
-//   .poster-details {
-//     color: white;
-//     text-decoration: none;
-//     cursor: pointer;
-
-//     display: block;
-//     position: relative;
-//     z-index: 1;
-
-//     .poster-actions {
-//       // transition-duration: 0.5s;
-//       opacity: 0;
-//     }
-//   }
-// }
 
 .movie-info {
   font-weight: 600;
+  font-size: 1.2em;
+  margin: 10px 0 15px 0;
   &.movie-info > * {
-    padding-right: 10px;
+    // padding-right: 10px;
+    margin-right: 15px;
   }
 }
 .movie-actions {
