--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,7 +3,7 @@
   align-items: center;
 
   color: #e5e5e5;
-
+  margin-bottom: 30px;
   .active {
     color: #fff !important;
     font-weight: 600;
@@ -23,7 +23,7 @@
     padding-left: 10px;
   }
   .header-pages > div {
-    padding: 0 10px;
+    padding: 0 12px;
   }
   .utils,
   .user {
