--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
 
-  color: #e5e5e5;
+  color: #e5e5e5 !important;
   margin-bottom: 30px;
   .active {
     color: #fff !important;
@@ -13,7 +13,7 @@
     text-decoration: none;
   }
   a:visited {
-    color: inherit;
+    color: #e5e5e5 !important;
   }
 
   .header-pages {
