--- a/src/components/MoviesRow/Movies/Movie/Movie.scss
+++ b/src/components/MoviesRow/Movies/Movie/Movie.scss
@@ -10,7 +10,7 @@
   left: 5%;
   z-index: 50;
 
-  height: 540px;
+  min-height: 530px;
   width: 450px;
   transition-duration: 5s;
   transition-delay: 2s;
@@ -22,6 +22,14 @@
     height: 300px;
     width: 450px;
   }
+
+  .movie-title{
+    width: 400px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   .movie-details {
     z-index: 2;
     padding-top: 0;
